# sudoors

./: .env  Cargo.toml  README.md  build.rs  diesel.toml  flake.nix  result
migrations/2024-03-22-093849_sudo/: down.sql  up.sql
proto/: sudoing.proto
src/: main.rs
src/agent/: mod.rs
src/cli/: mod.rs
src/common/: db.rs  mod.rs  models.rs  schema.rs  sudo.rs
src/server/: grpc.rs  http.rs  mod.rs
