[package]
name = "sudoors"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.81"
clap = "4.5.3"
clap-verbosity-flag = "2.2.0"
ctrlc = "3.4.4"
diesel = { version = "2.1.5", features = ["sqlite"] }
dotenv = "0.15.0"
gethostname = "0.4.3"
log = "0.4.21"
prost = "0.12.3"
reqwest = { version = "0.12.2", features = ["blocking"] }
rocket = { version = "0.5.0", features = ["json"] }
serde = "1.0.197"
serde_json = "1.0.114"
simple_logger = "4.3.3"
tera = { version="1.19.1", default-features = false }
tokio = { version = "1.36.0", features = ["time", "full"] }
tonic = "0.11.0"

[build-dependencies]
tonic-build = "0.11.0"
